extra/ingress/example-ingress.yaml
# ingress/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /service1
            pathType: Prefix
            backend:
              serviceName: example-service1
              servicePort: 80
          - path: /service2
            pathType: Prefix
            backend:
              serviceName: example-service2
              servicePort: 80
      host: shop.myawesomestore.com
